--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-i18next": "^16.3.3",
     "react-parallax": "^3.5.2",
     "react-router-dom": "^7.9.6",
+    "react-scroll-parallax": "^3.5.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "three": "^0.181.1"
